[package]
name = "json-list"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "2.11.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["indexmap", "preserve_order"] }
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
atty = "0.2"
regex = "1.7"
term_size = "0.3.2"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'
strip = true